--- a/src/presentations/application/Layout.pug
+++ b/src/presentations/application/Layout.pug
@@ -17,6 +17,7 @@ html(lang=props.lang)
     meta(name="author" content=props.author)
     meta(name="keywords" content=props.keywords.join(','))
     link(rel="alternate" type="application/rss+xml" title="RSS 2.0" href=`/rss?lang=${props.lang}`)
+    link(rel="contents" href="/sitemap.xml")
 
     meta(name="theme-color" content="white")
 
