--- a/src/presentations/components/Footer.pug
+++ b/src/presentations/components/Footer.pug
@@ -4,5 +4,5 @@ mixin Footer
       li.Footer--List--Item
         a(href="/about-us")= dic.t('Components.Footer.ABOUT_US')
       li.Footer--List--Item
-        a(href="/")= dic.t('Components.Footer.SITEMAP')
+        a(href="/sitemap")= dic.t('Components.Footer.SITEMAP')
     p.Footer--Copyright!= '&copy; ' + dic.t('name') + dic.t('Components.Footer.copyright')
