--- a/src/presentations/templates/Recipe/index.pug
+++ b/src/presentations/templates/Recipe/index.pug
@@ -19,8 +19,8 @@ block body
       .Recipe--CoverPicture--Content
         .Recipe--CoverPicture--Content--Image
           +Picture(props.coverPicture)
-            source(media="(min-width: 446px)" srcset=props.coverPicture.rectangleSrc)
-            source(media="(max-width: 446px)" srcset=props.coverPicture.squareSrc)
+            source(media="(min-width: calc(816px / 2))" srcset=props.coverPicture.rectangleSrc)
+            source(media="(max-width: calc(816px / 2))" srcset=props.coverPicture.squareSrc)
 
     .Recipe--Content
       .Recipe--Content--Title
