Create privacy page

--- a/src/presentations/components/Footer.pug
+++ b/src/presentations/components/Footer.pug
@@ -5,4 +5,6 @@ mixin Footer
         a(href="/about-us")= dic.t('Components.Footer.ABOUT_US')
       li.Footer--List--Item
         a(href="/sitemap")= dic.t('Components.Footer.SITEMAP')
+      li.Footer--List--Item
+        a(href="/privacy")= dic.t('Components.Footer.PRIVACY')
     p.Footer--Copyright!= '&copy; ' + dic.t('name') + dic.t('Components.Footer.copyright')
