--- a/src/presentations/pages/Maps/index.pug
+++ b/src/presentations/pages/Maps/index.pug
@@ -13,4 +13,6 @@ block body
   .Maps
     +Header(props.header)
     +Navigation(props.navigation)
+    .Maps--Content
+      .Maps--Content--Map
     +Footer
