Implement temporary maps page

--- a/src/presentations/pages/Maps/index.pug
+++ b/src/presentations/pages/Maps/index.pug
@@ -11,8 +11,6 @@ block meta
 
 block body
   .Maps
-    +Header(props.header)
-    +Navigation(props.navigation)
     .Maps--Content
       .Maps--Content--Map
-    +Footer
+      .Maps--Content--Modal
