--- a/src/presentations/pages/Maps/index.css
+++ b/src/presentations/pages/Maps/index.css
@@ -1,15 +1,39 @@
 @import 'pages/Maps/leaflet';
 
 @import 'application/vars';
-@import 'components/Header';
-@import 'components/Footer';
-@import 'components/Navigation';
+
+html,
+body {
+  height: 100%;
+}
 
 .Maps {
+  width: 100%;
+  height: 100%;
+
   .Maps--Content {
+    position: relative;
+    width: 100%;
+    height: 100%;
+
     .Maps--Content--Map {
       width: 100%;
-      height: 400px;
+      height: 100%;
+    }
+
+    .Maps--Content--Modal {
+      position: absolute;
+      top: 100%;
+      left: 0;
+      width: 100%;
+      background: $color-white;
+      z-index: 4000;
+      transform: translateY(0);
+      transition: transform 170ms ease-in-out;
+
+      &.Maps--Content--Modal__Open {
+        transform: translateY(-100%);
+      }
     }
   }
 
@@ -19,5 +43,32 @@
     height: 16px!important;
     border-radius: 50%;
     opacity: 0.88;
+  }
+}
+
+.Modal {
+  .Modal--Content {
+    padding: 16px;
+
+    .Modal--Name {
+      font-weight: $font-bold;
+    }
+
+    ul {
+      display: inline-block;
+
+      li {
+        display: inline-block;
+
+        .Modal--Media {
+          display: inline-block;
+          width: 24px;
+          height: 24px;
+          background: black;
+          color: white;
+          text-align: center;
+        }
+      }
+    }
   }
 }
