--- a/src/presentations/pages/Maps/index.css
+++ b/src/presentations/pages/Maps/index.css
@@ -1,6 +1,6 @@
-@import 'pages/Maps/leaflet';
-
 @import 'application/vars';
+@import 'components/Map';
+@import 'components/StoreMarker';
 
 html,
 body {
@@ -17,11 +17,6 @@ body {
     width: 100%;
     height: 100%;
 
-    .Maps--Content--Map {
-      width: 100%;
-      height: 100%;
-    }
-
     .Maps--Content--Modal {
       position: absolute;
       top: 100%;
@@ -36,14 +31,6 @@ body {
         transform: translateY(-100%);
       }
     }
-  }
-
-  .icon {
-    background: red;
-    width: 16px !important;
-    height: 16px !important;
-    border-radius: 50%;
-    opacity: 0.88;
   }
 }
 
