--- a/src/presentations/application/vars.css
+++ b/src/presentations/application/vars.css
@@ -3,6 +3,7 @@ $color-white: #fff;
 $color-text: rgba(0, 0, 0, 0.87);
 $color-text-secondary: rgba(0, 0, 0, 0.6);
 $color-text-hint: rgba(0, 0, 0, 0.38);
+$color-text-attention: #d32f2f;
 $color-shadow: rgba(0, 0, 0, 0.12);
 $color-active: rgba(0, 0, 0, 0.04);
 $color-background: #fafafa;
