--- a/src/presentations/pages/Maps/index.css
+++ b/src/presentations/pages/Maps/index.css
@@ -22,18 +22,20 @@ body {
 
 .Modal {
   position: absolute;
-  top: 100%;
+  bottom: 0;
   left: 0;
   right: unset;
   width: 100%;
   height: auto;
+  max-height: 100%;
+  overflow: scroll;
   background: $color-white;
   z-index: 4000;
   transform: translateY(0);
   transition: transform 170ms ease-in-out;
 
-  &.Modal__Open {
-    transform: translateY(-100%);
+  &.Modal__Hidden {
+    transform: translateY(100%);
   }
 }
 
@@ -41,8 +43,7 @@ body {
   .Modal {
     position: absolute;
     top: 0;
-    left: unset;
-    right: 100%;
+    left: 0;
     width: auto;
     height: 100%;
     background: $color-white;
@@ -50,8 +51,8 @@ body {
     transform: translateX(0);
     transition: transform 170ms ease-in-out;
 
-    &.Modal__Open {
-      transform: translateX(100%);
+    &.Modal__Hidden {
+      transform: translateX(-100%);
     }
   }
 }
