--- a/src/presentations/pages/Maps/index.pug
+++ b/src/presentations/pages/Maps/index.pug
@@ -13,7 +13,7 @@ block body
     .Maps--Content
       +Map
       if props.store
-        .Modal.Modal__Open
+        .Modal
           +StoreCard(props.store, props.currentDay, props.openStatus, props.nextStatusMessage)
       else
-        .Modal
+        .Modal.Modal__Hidden
