Use material icons

--- a/src/presentations/application/Layout.pug
+++ b/src/presentations/application/Layout.pug
@@ -18,6 +18,7 @@ html(lang=props.lang)
     meta(name="keywords" content=props.keywords.join(','))
     link(rel="alternate" type="application/rss+xml" title="RSS 2.0" href=`/rss?lang=${props.lang}`)
     link(rel="contents" href="/sitemap.xml")
+    link(href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet")
 
     meta(name="theme-color" content="white")
 
